test/compile_errors/err_spawn_keyword_removed.w
//! expect-check-fail: expected expression

async fn work() -> i32:
    1

fn main:
    spawn work()
